--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "migrate": "npx drizzle-kit generate"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -18,6 +19,7 @@
     "@rn-primitives/dialog": "^1.2.0",
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@rn-primitives/table": "^1.2.0",
     "@shopify/flash-list": "1.7.6",
